[tool.poetry]
name = "XXX"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
numpy = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
flake8 = "*"
autopep8 = "*"
rope = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pylint = "*"
types-python-dateutil = "*"
jupyter = "*"
rise = "*"
jupyterlab = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
